--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
 
   <body>
-    <header class="jumbotron">
+    <header class="jumbotron bg-primary">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
@@ -61,7 +61,7 @@
         <!-- 12PM Timeblocks go here -->
         <div class="input-group input-group-lg" data-hour="12">
             <div class="input-group-prepend">
-                <span class="input-group-text time-block block4">12PM</span>
+                <span class="input-group-text time-block block4 paast present future">12PM</span>
             </div>
             <input type="text" id="hour12"   class="form-control form12" aria-label="Large">
             <button class="btn saveBtn"><i class="far fa-save"></i></button>
@@ -123,6 +123,6 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/script2.js"></script>
   </body>
 </html>
