--- a/index.html
+++ b/index.html
@@ -23,68 +23,71 @@
   </head>
 
   <body>
-    <header class="jumbotron bg primary">
+    <header class="jumbotron bg-primary">
       <h1 class="text-white font-weight-bold font-italic display-3">Work Day Scheduler</h1>
       <p class="text-white font-weight-bold lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="text-white font-weight-white lead"></p>
+      <p id="currentDay" class="text-white font-weight-bold lead"></p>
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div id="hour9" class="row time-block">
-        
+      <div id="hour9" class="row time-block past present future">
         <div class="col-md-1 hour">9:00am</div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div class="hour10" class="row time-block">
+      <div class="hour10" class="row time-block past present future">
+
         <div class="col-md-1 hour">10:00am</div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div class="hour11" class="row time-block">
-        <div class="col-md-1 hour">10:00am</div>
+      <div class="hour11" class="row time-block past present future">
+
+        <div class="col-md-1 hour">11:00am</div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div class="hour12" class="row time-block">
-        <div class="col-md-1 hour">10:00am</div>
+      <div class="hour12" class="row time-block past present future">
+
+        <div class="col-md-1 hour">12:00pm</div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div class="hour13" class="row time-block">
-        <div class="col-md-1 hour">10:00am</div>
+      <div class="hour13" class="row time-block past present future">
+
+        <div class="col-md-1 hour">1:00pm</div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div class="hour14" class="row time-block">
-        <div class="col-md-1 hour">10:00am</div>
+      <div class="hour14" class="row time-block past present future">
+        <div class="col-md-1 hour">2:00pm</div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div class="hour15" class="row time-block">
-        <div class="col-md-1 hour">10:00am</div>
+      <div class="hour15" class="row time-block past present future">
+        <div class="col-md-1 hour">3:00pm</div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div class="hour16" class="row time-block">
+      <div class="hour16" class="row time-block past present future">
         <div class="col-md-1 hour">4:00pm</div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div class="hour17" class="row time-block">
+      <div class="hour17" class="row time-block past present future">
         <div class="col-md-1 hour">5:00pm</div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
-      <div class="hour18" class="row time-block">
+      <div class="hour18" class="row time-block past present future">
         <div class="col-md-1 hour">6:00pm</div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
