--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
-      <div id="hour18" class="row time-block past present future">
+      <div id="hour18" class="row time-block present past future">
         <div class="col-md-1 hour">6:00pm</div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
